deployment/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rc-search
  namespace: rc-search
  labels:
    app: rc-search
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rc-search
  minReadySeconds: 10
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: rc-search
    spec:
      containers:
      - name: rc-search-listener
        image: 464485551753.dkr.ecr.us-east-1.amazonaws.com/develop/rc-search:latest
        imagePullPolicy: Always
        resources:
          requests:
            memory: "200Mi"
            cpu: "250m"
          limits:
            memory: "500Mi"
            cpu: "500m"
        ports:
        - containerPort: 5622
        command: ["make", "run"]
      - name: rc-search-api
        image: 464485551753.dkr.ecr.us-east-1.amazonaws.com/develop/rc-search:latest
        imagePullPolicy: Always
        resources:
          requests:
            memory: "200Mi"
            cpu: "250m"
          limits:
            memory: "500Mi"
            cpu: "500m"
        ports:
        - containerPort: 5623
        command: ["rc_search", "start-server"]
---
apiVersion: v1
kind: Service
metadata:
  name: rc-search-svc
  namespace: rc-search
  labels:
    app: rc-search
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      name: http
      port: 5623
      targetPort: 5623
  selector:
    app: rc-search
